cncProd/force-app/main/default/objects/User/fields/Account_Activation_Request__c.field-meta.xml
<CustomField>
    <fullName>Account_Activation_Request__c</fullName>
    <label>Account Activation Request</label>
    <type>DateTime</type>
</CustomField>