cncProd/force-app/main/default/objects/User/fields/Average_User__c.field-meta.xml
<CustomField>
    <fullName>Average_User__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>