cncProd/force-app/main/default/objects/User/fields/CNTID_NRIC__c.field-meta.xml
<CustomField>
    <fullName>CNTID_NRIC__c</fullName>
    <formula>ContactId__c  &amp;  NRIC__c</formula>
    <label>CNTID_NRIC</label>
    <type>Text</type>
</CustomField>