cncProd/force-app/main/default/objects/User/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>CASESAFEID(Contact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactId</label>
    <type>Text</type>
</CustomField>