cncProd/force-app/main/default/objects/User/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>End User derived from this Contact from JCC contact</description>
    <inlineHelpText>End User derived from this Contact from JCC contact</inlineHelpText>
    <label>ContactId (deprecated)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>