cncProd/force-app/main/default/objects/User/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <formula>IF(ISBLANK(FirstName), &quot;Customer&quot;, &quot;Customer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Lastname is blank</inlineHelpText>
    <label>CustomerName</label>
    <type>Text</type>
</CustomField>