cncProd/force-app/main/default/objects/User/fields/dsgen__Docusign_Admin__c.field-meta.xml
<CustomField>
    <fullName>dsgen__Docusign_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign Admin</label>
    <type>Checkbox</type>
</CustomField>