cncProd/force-app/main/default/objects/User/fields/dsgen__Docusign_Invite_Id__c.field-meta.xml
<CustomField>
    <fullName>dsgen__Docusign_Invite_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Docusign Invite Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>