cncProd/force-app/main/default/objects/User/fields/Email_Check__c.field-meta.xml
<CustomField>
    <fullName>Email_Check__c</fullName>
    <formula>Username = Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Check</label>
    <type>Checkbox</type>
</CustomField>