cncProd/force-app/main/default/objects/User/fields/ExcludeFromMeetingLog__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromMeetingLog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User is excluded from Meeting Log</description>
    <inlineHelpText>Excludes User from Meeting Log</inlineHelpText>
    <label>ExcludeFromMeetingLog?</label>
    <type>Checkbox</type>
</CustomField>