cncProd/force-app/main/default/objects/User/fields/ExcludeFromWarehouse__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromWarehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked to exclude consultant from warehouse list</description>
    <inlineHelpText>Checked to exclude consultant from warehouse list</inlineHelpText>
    <label>ExcludeFromWarehouse?</label>
    <type>Checkbox</type>
</CustomField>