cncProd/force-app/main/default/objects/User/fields/Fulco_User__c.field-meta.xml
<CustomField>
    <fullName>Fulco_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Fulco User?</description>
    <inlineHelpText>Is this a Fulco User?</inlineHelpText>
    <label>Fulco User</label>
    <type>Checkbox</type>
</CustomField>