cncProd/force-app/main/default/objects/User/fields/Full_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Check__c</fullName>
    <description>To check on the Name</description>
    <formula>upper(LastName)+ &apos; &apos;+ upper(FirstName)=upper( Contact.Full_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name Check</label>
    <type>Checkbox</type>
</CustomField>