cncProd/force-app/main/default/objects/User/fields/Is_Eligible_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_Opp_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eligible Opp Owner</label>
    <type>Checkbox</type>
</CustomField>