cncProd/force-app/main/default/objects/User/fields/isValid__c.field-meta.xml
<CustomField>
    <fullName>isValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isValid</label>
    <type>Checkbox</type>
</CustomField>