cncProd/force-app/main/default/objects/User/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leng Kee</fullName>
            </value>
            <value>
                <fullName>Pandan Gardens</fullName>
            </value>
            <value>
                <fullName>Sin Ming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>