cncProd/force-app/main/default/objects/User/fields/Purchaser_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Code__c</fullName>
    <label>Purchaser Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>