cncProd/force-app/main/default/objects/User/fields/Registered_Vehicle_IDs__c.field-meta.xml
<CustomField>
    <fullName>Registered_Vehicle_IDs__c</fullName>
    <label>Registered Vehicle IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>