cncProd/force-app/main/default/objects/User/fields/Username2__c.field-meta.xml
<CustomField>
    <fullName>Username2__c</fullName>
    <formula>IF( or(CONTAINS(Username, &apos;ccfmd&apos;),CONTAINS (Username ,&apos;ccfulco.com.sg&apos;) ), &apos;ccfmd&apos;, LEFT( Username ,  FIND(&apos;@&apos;, Username) - 1))</formula>
    <label>Username2</label>
    <type>Text</type>
</CustomField>