cncProd/force-app/main/default/objects/User/listViews/dfsle__Inactive.listView-meta.xml
<ListView>
    <fullName>dfsle__Inactive</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dfsle__Username__c</field>
        <operation>equals</operation>
        <value>null</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DocuSign Inactive Users</label>
</ListView>